--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 body {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     box-sizing: border-box;
     min-height: 100vh;
     max-width: 800px;
     gap: 72px;
     padding: 14px;
     width: 100%;
+}
+h1 {
+    font-weight: 3.0rem;
+}
+nav .email {
+    text-decoration: none;
+    color: black;
 }
