--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     box-sizing: border-box;
     min-height: 100vh;
     max-width: 800px;
@@ -8,13 +9,16 @@ body {
     width: 100%;
 }
 h1 {
+    display: flex;
+    justify-content: center;
     font-weight: 3.0rem;
     font-size: 52px;
 }
 nav .email {
-    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
     color: black;
-    border: 1px solid black;
     margin-top: 0;
     padding: 2px;
 }
